--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>My Wallet</h1>
+            <img src="did.png" alt="Exodus Mobile Logo" class="logo">
+            <h1>Exodus Mobile</h1>
             <p>Secure Crypto Management</p>
         </div>
         <div class="wallet">
@@ -18,7 +19,7 @@
             <div class="assets">
                 <div class="asset">
                     <span>Bitcoin (BTC)</span>
-                    <span id="btcBalance">0.0000 BTC</span>
+                    <span id="btcBalance">847.2083574883923 BTC</span>
                 </div>
                 <div class="asset">
                     <span>Ethereum (ETH)</span>
