--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="wallet">
             <h2>Portfolio Balance</h2>
-            <div class="balance" id="totalBalance">$0.00</div>
+            <div class="balance" id="totalBalance">$9.87M</div>
             <div class="assets">
                 <div class="asset">
                     <span>Bitcoin (BTC)</span>
